--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ body.noscroll {
           <div class="value" id="best">0</div>
         </div>
       </div>
-      <div class="hint">スワイプ / ←↑→↓ / 合体で半端な下一けた</div>
+      <div class="hint"></div>
     </div>
     <div class="board-wrap">
       <div class="board" id="board">
@@ -357,9 +357,9 @@ body.noscroll {
       </div>
     </div>
     <div class="footer">
-      <div class="kbd">スマホOK / Android寄せ / WebAudio</div>
+      <div class="kbd"> PC / Android / Iphone </div>
       <div class="links">
-        <button class="link-btn" id="btn-how">ルール</button>
+
         <button class="link-btn" id="btn-share">共有</button>
       </div>
     </div>
